bk_ida/gccida/c1/int_loc_descriptor
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_loc_descriptor/src/dwarf2out.c:8137:25: error: use of undeclared identifier 'dwarf_location_atom'
return new_loc_descr( ( dwarf_location_atom)v2, i, 0LL); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_loc_descriptor/src/obj/dwarf2out.o] Error 1
